--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
         <!-- Right side section of Navbar -->
         <div class="flex justify-between items-center gap-0 md:gap-7">
           <div
-            class="bg-[#41ff6b1a] px-2 py-2 md:px-5 md:py-5 rounded-full flex gap-2"
+            class="bg-[#41ff6b1a] px-3 py-1 md:px-5 md:py-5 rounded-full flex gap-2"
           >
-            <span id="heart-count">0</span>❤
+            <span id="heart-count">0</span>
+            <img src="./assets/heart.png" class="w-[30px] h-[30px]" alt="" />
           </div>
           <div
             class="flex gap-3 bg-[#41ff6b1a] px-2 py-2 md:px-5 md:py-5 rounded-full"
@@ -50,7 +51,9 @@
             <span id="coin-count">100</span>
             <img class="w-6" h-6 src="./assets/coin.png" alt="" />
           </div>
-          <div class="bg-[#00A63E] rounded-full px-5 py-2 md:px-9 md:py-4">
+          <div
+            class="bg-[#00A63E] rounded-full px-5 py-2 text-white md:px-9 md:py-4"
+          >
             <span id="copy-count">0</span> Copy
           </div>
         </div>
@@ -116,12 +119,12 @@
             <!-- card button herer -->
             <div class="bg-white flex gap-3 mt-4">
               <button
-                class="btn-copy btn btn-neutral !border-gray-300 w-1/2 !text-black !bg-[#FFFFFF]"
+                class="btn-copy btn btn-neutral !border-gray-300 w-1/2 !text-black !rounded-xl !bg-[#FFFFFF]"
               >
                 <span><i class="fa-regular fa-clone"></i></span>Copy
               </button>
               <button
-                class="btn-call btn btn-neutral !border-none w-1/2 !bg-[#00A63E] text-[#ffffff]"
+                class="btn-call btn btn-neutral !border-none w-1/2 !rounded-xl !bg-[#00A63E] text-[#ffffff]"
               >
                 <span><i id="call-icon" class="fa-solid fa-phone"></i></span
                 >Call
@@ -162,12 +165,12 @@
             <!-- card button herer -->
             <div class="bg-white flex gap-3 mt-4">
               <button
-                class="btn-copy btn btn-neutral !border-gray-300 w-1/2 !text-black !bg-[#FFFFFF]"
+                class="btn-copy btn btn-neutral !border-gray-300 w-1/2 !text-black !rounded-xl !bg-[#FFFFFF]"
               >
                 <span><i class="fa-regular fa-clone"></i></span>Copy
               </button>
               <button
-                class="btn-call btn btn-neutral !border-none w-1/2 !bg-[#00A63E] text-[#ffffff]"
+                class="btn-call btn btn-neutral !border-none w-1/2 !bg-[#00A63E] !rounded-xl text-[#ffffff]"
               >
                 <span><i class="fa-solid fa-phone"></i></span>Call
               </button>
@@ -207,12 +210,12 @@
             <!-- card button herer -->
             <div class="bg-white flex gap-3 mt-4">
               <button
-                class="btn-copy btn btn-neutral !border-gray-300 w-1/2 !text-black !bg-[#FFFFFF]"
+                class="btn-copy btn btn-neutral !border-gray-300 w-1/2 !text-black !rounded-xl !bg-[#FFFFFF]"
               >
                 <span><i class="fa-regular fa-clone"></i></span>Copy
               </button>
               <button
-                class="btn-call btn btn-neutral !border-none w-1/2 !bg-[#00A63E] text-[#ffffff]"
+                class="btn-call btn btn-neutral !border-none w-1/2 !bg-[#00A63E] !rounded-xl text-[#ffffff]"
               >
                 <span><i class="fa-solid fa-phone"></i></span>Call
               </button>
@@ -252,12 +255,12 @@
             <!-- card button herer -->
             <div class="bg-white flex gap-3 mt-4">
               <button
-                class="btn-copy btn btn-neutral !border-gray-300 w-1/2 !text-black !bg-[#FFFFFF]"
+                class="btn-copy btn btn-neutral !border-gray-300 w-1/2 !text-black !rounded-xl !bg-[#FFFFFF]"
               >
                 <span><i class="fa-regular fa-clone"></i></span>Copy
               </button>
               <button
-                class="btn-call btn btn-neutral !border-none w-1/2 !bg-[#00A63E] text-[#ffffff]"
+                class="btn-call btn btn-neutral !border-none w-1/2 !bg-[#00A63E] !rounded-xl text-[#ffffff]"
               >
                 <span><i class="fa-solid fa-phone"></i></span>Call
               </button>
@@ -299,12 +302,12 @@
             <!-- card button herer -->
             <div class="bg-white flex gap-3 mt-4">
               <button
-                class="btn-copy btn btn-neutral !border-gray-300 w-1/2 !text-black !bg-[#FFFFFF]"
+                class="btn-copy btn btn-neutral !border-gray-300 w-1/2 !text-black !rounded-xl !bg-[#FFFFFF]"
               >
                 <span><i class="fa-regular fa-clone"></i></span>Copy
               </button>
               <button
-                class="btn-call btn btn-neutral !border-none w-1/2 !bg-[#00A63E] text-[#ffffff]"
+                class="btn-call btn btn-neutral !border-none w-1/2 !bg-[#00A63E] !rounded-xl text-[#ffffff]"
               >
                 <span><i class="fa-solid fa-phone"></i></span>Call
               </button>
@@ -344,12 +347,12 @@
             <!-- card button herer -->
             <div class="bg-white flex gap-3 mt-4">
               <button
-                class="btn-copy btn btn-neutral !border-gray-300 w-1/2 !text-black !bg-[#FFFFFF]"
+                class="btn-copy btn btn-neutral !border-gray-300 w-1/2 !text-black !rounded-xl !bg-[#FFFFFF]"
               >
                 <span><i class="fa-regular fa-clone"></i></span>Copy
               </button>
               <button
-                class="btn-call btn btn-neutral !border-none w-1/2 !bg-[#00A63E] text-[#ffffff]"
+                class="btn-call btn btn-neutral !border-none w-1/2 !bg-[#00A63E] !rounded-xl text-[#ffffff]"
               >
                 <span><i class="fa-solid fa-phone"></i></span>Call
               </button>
@@ -389,12 +392,12 @@
             <!-- card button herer -->
             <div class="bg-white flex gap-3 mt-4">
               <button
-                class="btn-copy btn btn-neutral !border-gray-300 w-1/2 !text-black !bg-[#FFFFFF]"
+                class="btn-copy btn btn-neutral !border-gray-300 w-1/2 !text-black !rounded-xl !bg-[#FFFFFF]"
               >
                 <span><i class="fa-regular fa-clone"></i></span>Copy
               </button>
               <button
-                class="btn-call btn btn-neutral !border-none w-1/2 !bg-[#00A63E] text-[#ffffff]"
+                class="btn-call btn btn-neutral !border-none w-1/2 !bg-[#00A63E] !rounded-xl text-[#ffffff]"
               >
                 <span><i class="fa-solid fa-phone"></i></span>Call
               </button>
@@ -406,11 +409,7 @@
           >
             <span class="flex justify-between items-center">
               <div class="bg-[#FFE3E2] p-4 rounded-2xl">
-                <img
-                  class="w-[40px] h-[40px]"
-                  src="./assets/emergency.png"
-                  alt=""
-                />
+                <img class="w-[40px] h-[40px]" src="./assets/brac.png" alt="" />
               </div>
               <span class="icon-heart-main"
                 ><i class="fa-regular fa-heart"></i
@@ -434,12 +433,12 @@
             <!-- card button herer -->
             <div class="bg-white flex gap-3 mt-4">
               <button
-                class="btn-copy btn btn-neutral !border-gray-300 w-1/2 !text-black !bg-[#FFFFFF]"
+                class="btn-copy btn btn-neutral !border-gray-300 w-1/2 !text-black !rounded-xl !bg-[#FFFFFF]"
               >
                 <span><i class="fa-regular fa-clone"></i></span>Copy
               </button>
               <button
-                class="btn-call btn btn-neutral !border-none w-1/2 !bg-[#00A63E] text-[#ffffff]"
+                class="btn-call btn btn-neutral !border-none w-1/2 !bg-[#00A63E] !rounded-xl text-[#ffffff]"
               >
                 <span><i class="fa-solid fa-phone"></i></span>Call
               </button>
@@ -453,7 +452,7 @@
               <div class="bg-[#FFE3E2] p-4 rounded-2xl">
                 <img
                   class="w-[40px] h-[40px]"
-                  src="./assets/emergency.png"
+                  src="./assets/Bangladesh-Railway.png"
                   alt=""
                 />
               </div>
@@ -479,12 +478,12 @@
             <!-- card button herer -->
             <div class="bg-white flex gap-3 mt-4">
               <button
-                class="btn-copy btn btn-neutral !border-gray-300 w-1/2 !text-black !bg-[#FFFFFF]"
+                class="btn-copy btn btn-neutral !border-gray-300 w-1/2 !text-black !rounded-xl !bg-[#FFFFFF]"
               >
                 <span><i class="fa-regular fa-clone"></i></span>Copy
               </button>
               <button
-                class="btn-call btn btn-neutral !border-none w-1/2 !bg-[#00A63E] text-[#ffffff]"
+                class="btn-call btn btn-neutral !border-none w-1/2 !bg-[#00A63E] !rounded-xl text-[#ffffff]"
               >
                 <span><i class="fa-solid fa-phone"></i></span>Call
               </button>
@@ -502,7 +501,7 @@
 
             <button
               id="clear-btn-handler"
-              class="rounded-full bg-[#00A63E] pl-4 pr-4 py-3 text-[#ffffff]"
+              class="rounded-full bg-[#00A63E] pl-4 pr-4 py-3 hover:bg-gray-400 text-[#ffffff]"
             >
               Clear
             </button>
